src/test/deca/codegen/invalid/NoInitPlusNoInitF.deca
// Description:
//    addition sans initialisation
//
// Resultats:
//  Erreur
//
// Historique:
//    cree le 13/01/2017
{
int y;
float x;
print(y + x);
}
